--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -102,7 +102,11 @@ section {
     width: 100%;
 }
 .card {
-    height: 100%;
+    &.bordered {
+        border: 1px solid $gray-200;
+        height: auto;
+    }
+    border-radius: 15px;
 
     .tag {
         z-index: 3;
@@ -139,7 +143,6 @@ section {
         overflow: hidden;
         cursor: pointer;
         height: 100%;
-        border-radius: 15px;
         &::after{
             position: absolute;
             content: "";
@@ -223,5 +226,11 @@ footer {
         margin: 50px 0;
         font-weight: 300;
         color: $gray-500;
+    }
+}
+main {
+    p{
+        color: $gray-500;
+        font-weight: 300;
     }
 }
